--- a/rolll/Base.lproj/Main.storyboard
+++ b/rolll/Base.lproj/Main.storyboard
@@ -103,10 +103,10 @@
             </objects>
             <point key="canvasLocation" x="125.59999999999999" y="364.7676161919041"/>
         </scene>
-        <!--View Controller-->
+        <!--Shop View Controller-->
         <scene sceneID="ckn-z8-eUm">
             <objects>
-                <viewController id="E6U-pa-OHP" sceneMemberID="viewController">
+                <viewController id="E6U-pa-OHP" customClass="ShopViewController" customModule="rolll" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="QhW-Cf-875"/>
                         <viewControllerLayoutGuide type="bottom" id="G2U-eN-ObH"/>
@@ -115,30 +115,53 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="jVt-kC-tbU">
-                                <rect key="frame" x="0.0" y="28" width="375" height="580"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="jVt-kC-tbU">
+                                <rect key="frame" x="0.0" y="28" width="375" height="579"/>
+                                <color key="backgroundColor" red="0.85490196080000003" green="0.78823529410000004" blue="0.67843137249999996" alpha="1" colorSpace="calibratedRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="O8d-fO-xVq">
-                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="itemSize" width="100" height="100"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="aea-Cx-Ys0">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="shopItem" id="aea-Cx-Ys0" customClass="ShopCollectionViewCell" customModule="rolll" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="p4f-ly-FiE">
+                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                </imageView>
+                                            </subviews>
                                         </view>
+                                        <color key="backgroundColor" red="0.50980392159999999" green="0.67843137249999996" blue="0.078431372550000003" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="p4f-ly-FiE" firstAttribute="leading" secondItem="aea-Cx-Ys0" secondAttribute="leading" id="S81-qw-fY5"/>
+                                            <constraint firstAttribute="trailing" secondItem="p4f-ly-FiE" secondAttribute="trailing" id="Ti8-5x-ND6"/>
+                                            <constraint firstItem="p4f-ly-FiE" firstAttribute="top" secondItem="aea-Cx-Ys0" secondAttribute="top" id="e1n-eL-Rze"/>
+                                            <constraint firstAttribute="bottom" secondItem="p4f-ly-FiE" secondAttribute="bottom" id="smJ-3K-DiF"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="shopItemImage" destination="p4f-ly-FiE" id="aWY-tr-r1E"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="jVt-kC-tbU" firstAttribute="leading" secondItem="2tu-7z-LlG" secondAttribute="leading" id="dT6-PF-l4f"/>
+                            <constraint firstItem="G2U-eN-ObH" firstAttribute="top" secondItem="jVt-kC-tbU" secondAttribute="bottom" constant="60" id="eHj-vG-tn4"/>
+                            <constraint firstAttribute="trailing" secondItem="jVt-kC-tbU" secondAttribute="trailing" id="gvk-wQ-6FJ"/>
+                            <constraint firstItem="jVt-kC-tbU" firstAttribute="top" secondItem="QhW-Cf-875" secondAttribute="bottom" constant="8" id="uu4-Gq-Tgi"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="shopCollectionView" destination="jVt-kC-tbU" id="tzf-xD-1z9"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e9t-uY-Yae" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
