--- a/rolll/Base.lproj/Main.storyboard
+++ b/rolll/Base.lproj/Main.storyboard
@@ -119,6 +119,9 @@
                                 <rect key="frame" x="170" y="61" width="33" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="play!"/>
+                                <connections>
+                                    <action selector="playButton:" destination="RLD-5r-kzI" eventType="touchUpInside" id="hRx-9P-4sU"/>
+                                </connections>
                             </button>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="cWh-yr-UNS">
                                 <rect key="frame" x="0.0" y="218" width="375" height="449"/>
@@ -167,6 +170,9 @@
                                 <rect key="frame" x="169" y="114" width="34" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="shop"/>
+                                <connections>
+                                    <action selector="shopButton:" destination="RLD-5r-kzI" eventType="touchUpInside" id="Mgl-Qg-XdN"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -183,11 +189,11 @@
         <scene sceneID="02j-kS-rZ3">
             <objects>
                 <collectionViewController storyboardIdentifier="ShopCollectionViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="bdO-n4-P0F" customClass="ShopCollectionViewController" customModule="rolll" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" id="KI7-eK-Deu">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="KI7-eK-Deu">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="bFB-HA-UXb">
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0qB-Eq-Gxa">
                             <size key="itemSize" width="50" height="50"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -226,14 +232,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="plO-zD-6n4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="940" y="1421"/>
-        </scene>
-        <!--Game-->
-        <scene sceneID="iZh-a8-W43">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Game" id="vTt-tv-aGE" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="sKq-KI-R7G" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1479" y="640"/>
         </scene>
         <!--Story View Controller-->
         <scene sceneID="jH7-GJ-MIK">
