--- a/rolll/Base.lproj/Main.storyboard
+++ b/rolll/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -157,6 +158,10 @@
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="RLD-5r-kzI" id="MhM-rQ-8dj"/>
+                                    <outlet property="delegate" destination="RLD-5r-kzI" id="3VR-tY-QSA"/>
+                                </connections>
                             </collectionView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eal-ex-RcU">
                                 <rect key="frame" x="16" y="20" width="55" height="30"/>
@@ -185,53 +190,97 @@
             </objects>
             <point key="canvasLocation" x="940" y="640.92953523238384"/>
         </scene>
-        <!--Shop Collection View Controller-->
-        <scene sceneID="02j-kS-rZ3">
+        <!--Shop View Controller-->
+        <scene sceneID="oj3-e8-IDT">
             <objects>
-                <collectionViewController storyboardIdentifier="ShopCollectionViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="bdO-n4-P0F" customClass="ShopCollectionViewController" customModule="rolll" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="KI7-eK-Deu">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3RG-BJ-t5t" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController storyboardIdentifier="ShopViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Vwg-tg-1wf" customClass="ShopViewController" customModule="rolll" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="NtV-m3-g84"/>
+                        <viewControllerLayoutGuide type="bottom" id="Pt5-lx-07s"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="OTV-z0-5aC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0qB-Eq-Gxa">
-                            <size key="itemSize" width="50" height="50"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        </collectionViewFlowLayout>
-                        <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="shopItem" id="HVq-I4-dC8" customClass="ShopCollectionViewCell" customModule="rolll" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cHb-JI-fWL">
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="m8J-pF-FfC">
+                                <rect key="frame" x="16" y="140" width="343" height="507"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Rp1-OF-DfE">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="shopItem" id="qxM-XR-g4y" customClass="ShopCollectionViewCell" customModule="rolll" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                        </imageView>
-                                    </subviews>
-                                </view>
-                                <constraints>
-                                    <constraint firstItem="cHb-JI-fWL" firstAttribute="top" secondItem="HVq-I4-dC8" secondAttribute="top" id="Mqi-Mq-4GF"/>
-                                    <constraint firstAttribute="trailing" secondItem="cHb-JI-fWL" secondAttribute="trailing" id="gJ1-Zs-4O8"/>
-                                    <constraint firstAttribute="bottom" secondItem="cHb-JI-fWL" secondAttribute="bottom" id="slj-yW-59I"/>
-                                    <constraint firstItem="cHb-JI-fWL" firstAttribute="leading" secondItem="HVq-I4-dC8" secondAttribute="leading" id="uxp-Y7-Gox"/>
-                                </constraints>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cph-Rr-w5p">
+                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="cph-Rr-w5p" secondAttribute="bottom" id="Eih-SS-Jmi"/>
+                                            <constraint firstItem="cph-Rr-w5p" firstAttribute="leading" secondItem="qxM-XR-g4y" secondAttribute="leading" id="Rcp-yS-4pY"/>
+                                            <constraint firstAttribute="trailing" secondItem="cph-Rr-w5p" secondAttribute="trailing" id="UI9-mP-bAV"/>
+                                            <constraint firstItem="cph-Rr-w5p" firstAttribute="top" secondItem="qxM-XR-g4y" secondAttribute="top" id="q6D-1U-5Bi"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="shopItemImage" destination="cph-Rr-w5p" id="fke-99-Cc1"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
                                 <connections>
-                                    <outlet property="shopItemImage" destination="cHb-JI-fWL" id="pH6-CQ-Znx"/>
+                                    <outlet property="dataSource" destination="Vwg-tg-1wf" id="Erp-qt-yos"/>
+                                    <outlet property="delegate" destination="Vwg-tg-1wf" id="WHr-fS-HM7"/>
                                 </connections>
-                            </collectionViewCell>
-                        </cells>
-                        <connections>
-                            <outlet property="dataSource" destination="bdO-n4-P0F" id="rJn-Jv-QiA"/>
-                            <outlet property="delegate" destination="bdO-n4-P0F" id="lLS-lz-vq5"/>
-                        </connections>
-                    </collectionView>
-                </collectionViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="plO-zD-6n4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                            </collectionView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Points:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mxg-SR-elg">
+                                <rect key="frame" x="128" y="28" width="52" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XZe-rM-ywS">
+                                <rect key="frame" x="20" y="20" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="0pM-ei-eam"/>
+                                    <constraint firstAttribute="width" constant="100" id="HjN-ka-KK4"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="chat" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uQb-MB-9Pr">
+                                <rect key="frame" x="128" y="57" width="34" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="m8J-pF-FfC" firstAttribute="trailing" secondItem="OTV-z0-5aC" secondAttribute="trailingMargin" id="2tT-vV-UX8"/>
+                            <constraint firstItem="mxg-SR-elg" firstAttribute="top" secondItem="NtV-m3-g84" secondAttribute="bottom" constant="8" id="7yx-dk-aYV"/>
+                            <constraint firstItem="uQb-MB-9Pr" firstAttribute="top" secondItem="mxg-SR-elg" secondAttribute="bottom" constant="8" id="8S5-SH-jIR"/>
+                            <constraint firstItem="mxg-SR-elg" firstAttribute="leading" secondItem="XZe-rM-ywS" secondAttribute="trailing" constant="8" id="Jwc-pL-5tQ"/>
+                            <constraint firstItem="XZe-rM-ywS" firstAttribute="top" secondItem="OTV-z0-5aC" secondAttribute="top" constant="20" id="RxG-LP-wNK"/>
+                            <constraint firstItem="Pt5-lx-07s" firstAttribute="top" secondItem="m8J-pF-FfC" secondAttribute="bottom" constant="20" id="WGE-u5-dqA"/>
+                            <constraint firstItem="m8J-pF-FfC" firstAttribute="top" secondItem="XZe-rM-ywS" secondAttribute="bottom" constant="20" id="cFe-YX-iov"/>
+                            <constraint firstItem="uQb-MB-9Pr" firstAttribute="leading" secondItem="XZe-rM-ywS" secondAttribute="trailing" constant="8" id="huh-Uf-vpD"/>
+                            <constraint firstItem="XZe-rM-ywS" firstAttribute="leading" secondItem="OTV-z0-5aC" secondAttribute="leading" constant="20" id="iDJ-9y-2MD"/>
+                            <constraint firstItem="m8J-pF-FfC" firstAttribute="leading" secondItem="OTV-z0-5aC" secondAttribute="leadingMargin" id="xrx-Wx-jpQ"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="shopCollectionView" destination="m8J-pF-FfC" id="dQL-MQ-eDH"/>
+                    </connections>
+                </viewController>
             </objects>
-            <point key="canvasLocation" x="940" y="1421"/>
+            <point key="canvasLocation" x="940" y="1384"/>
         </scene>
         <!--Story View Controller-->
         <scene sceneID="jH7-GJ-MIK">
